<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/compose"
        android:textColor="@color/colorAccent"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/compose_here"
        android:textSize="30sp"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:textFontWeight="1000"
        android:freezesText="true"
        android:textStyle="italic"
        android:textAppearance="?android:absListViewStyle"
        tools:targetApi="p" />

    <TextView
        android:id="@+id/mail_to"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TO:" />

    <EditText
        android:layout_marginTop="15dp"
        android:id="@+id/recipient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_the_mail_id"
        android:inputType="textEmailAddress" />

    <EditText
        android:layout_marginTop="15dp"
        android:id="@+id/subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/subject"
        android:maxLength="25"
        android:inputType="textEmailSubject" />

    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:id="@+id/body"
        android:inputType="textLongMessage"
        android:hint="@string/type_your_message_here" />


    <Button
        android:id="@+id/sendEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/send" />

    <Button
        android:id="@+id/reset_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/reset" />


</LinearLayout>